[project]
name = "clinical-coder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk>=0.1.0",
    "fastapi==0.110.0",
    "httpx>=0.28.1",
    "langfuse==2.58.0",
    "mcp>=1.2.0,<2.0.0",
    "prometheus-client==0.20.0",
    "pydantic>=2.11.3",
    "python-dotenv>=1.0.1",
    "qdrant-client==1.8.0",
    "ray[default]>=2.30.0",
    "tqdm==4.66.2",
    "uvicorn==0.28.0",
]
